# memory

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ai4u_memory/: __init__.py  client.py  config.py  entity_types.py  llm_compat.py  main.py
src/ai4u_memory/routers/: ingest.py  recall.py
src/ai4u_memory/utils/: salience.py
tests/: test_api.py  test_entity_types.py  test_recall.py
